# iago-issues-a-gogo

./: .gitignore  AGENT.md  AGENT_executable.md  README.md  index.js  package-lock.json  package.json  relay-config.json  tmp-relay-vault.json  user_guide.md
.backlog/: issues.json
cli/: cli.js
relay-server/: README.md  server.js
scripts/: build-windows-exe.mjs
server/: README.md  package.json  server.js
src/: index.js
src/cli/: README.md
src/node/cli/: README.md  cli.js
src/node/server/: README.md  package.json  server.js
src/node/shared/: relay-config.js  repository.js
src/rust/: Cargo.toml  README.md
src/rust/cli/: Cargo.toml  build.rs
src/rust/cli/src/: main.rs
src/rust/cli/windows/: iago.rc
src/rust/server/: Cargo.toml  build.rs
src/rust/server/src/: config.rs  main.rs  windows_app.rs
src/rust/server/windows/: iago-server.rc
src/rust/shared/: Cargo.toml
src/rust/shared/src/: lib.rs  relay_config.rs  repository.rs
src/server/: README.md
test/: index.test.js
