[package]
name = "iago"
version = "0.1.0"
edition = "2021"
description = "IAGO CLI for the GitHub issues resolver workspace."

[dependencies]
iago-shared = { path = "../shared" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embed-resource = "3"
