[package]
name = "iago-server"
version = "0.1.0"
edition = "2021"
description = "IAGO relay server for the GitHub issues resolver workspace."

[dependencies]
aes-gcm = "0.10"
iago-shared = { path = "../shared" }
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.21"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "3"
